added base layout, keys, and custom tailwind styles

--- a/calculator-app/src/index.css
+++ b/calculator-app/src/index.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+html {
+	font-family: 'League Spartan', sans-serif;
+}
+
+/* @layer base {
     :root {
         --
     }
-}
+} */
